--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/1QjwaBjMGb1qY3gXgq0I5oCauOl2psfXO/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/18BPQKvOAc1Exnc7RLuqXRCUZNX7EBCkY/view?usp=drive_link">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
