--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/hero-banner-sm.png" alt="A man in a alice blue shirt with a thinking expression"
+          <img src="./assets/images/my1.png" alt="A man in a alice blue shirt with a thinking expression"
             class="w-100">
         </figure>
 
