--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/my1.png" alt="A man in a alice blue shirt with a thinking expression"
+          <img src="./assets/images/my1.png" alt="my pic"
             class="w-100">
         </figure>
 
@@ -246,7 +246,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/1h4W9v1UXJq_5PUohJnfGhmocflI0vQyu/view?usp=drive_link">
+            <a href="https://drive.google.com/file/d/1xUgkR3T1P4XWMWIXF1TlrSQL994K6UKG/view?usp=drive_link">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
