--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/1kUPAPlFKpEMJUDU161rhUXIWd9jsYhav/view?usp=drive_link">
+            <a href="https://drive.google.com/file/d/1PFRrScHqmwFyAS4c6RYduBFyBB8WDtci/view?usp=sharing">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
