--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/1SCQNrr_5MoHjkbHn1kfynthhW1evWX8B/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/17qtdn_Okqi-vBpXvigqeStE3BlzUbFKo/view?usp=sharing">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
@@ -445,7 +445,7 @@
             </div>
           </li>
           <li>
-            <a href="www.marvelwears.shop" class="project-card">
+            <a href="https://marvelwears.onrender.com/" class="project-card">
 
               <figure class="card-banner">
                 <img src="./assets/images/prjct7.jpg" class="w-100"
