--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <img src="./assets/images/my1.png" alt="my pic"
+          <img src="./assets/images/my pic.jpg" alt="my pic"
             class="w-100">
         </figure>
 
