--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/17qtdn_Okqi-vBpXvigqeStE3BlzUbFKo/view?usp=share_link">
+            <a href="https://drive.google.com/file/d/1TsmJdEFS-aRpsnZAa7eObODtf2RYAN7K/view?usp=sharing">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
