--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mohandas T S</title>
 
-  <!-- 
-    - favicon
-  -->
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - google font link
-  -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -29,10 +21,6 @@
 
 <body id="top" class="light_theme ">
 
-  <!-- 
-    - #HEADER
-  -->
-
   <header class="header" data-header>
     <div class="container">
 
@@ -41,15 +29,6 @@
       </h1>
 
       <div class="navbar-actions">
-
-        <!-- <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select> -->
-
-        <!-- <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
-          <span class="icon"></span>
-        </button> -->
 
       </div>
 
@@ -94,10 +73,6 @@
 
   <main>
     <article class="container">
-
-      <!-- 
-        - #HERO
-      -->
 
       <section class="hero" id="home">
 
@@ -246,7 +221,7 @@
           </p>
 
           <div class="btn-group">
-            <a href="https://drive.google.com/file/d/15P9_ZuEmnZ9e6jAD6ADSVaesAIMWoEyT/view?usp=drivesdk">
+            <a href="https://drive.google.com/file/d/1EipxFKIsaf81azRy22xULy7DngAQSbpr/view?usp=sharing">
 
             <button class="btn btn-primary">Download cv</button>
           </a>
